--- a/rmd_basic_plots.Rmd
+++ b/rmd_basic_plots.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Basic Plots"
-author: "Jeff Goldsmith"
-date: 2019-09-10
+author: "William Anderson"
+date: 2022-09-15
 output: html_document
 ---
 
